Added image to lasagna recipe.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Beef_lasagna_at_Cafe_Stax%2C_July_2009.jpg/1920px-Beef_lasagna_at_Cafe_Stax%2C_July_2009.jpg">
     <p>Ingredients: Tomato sauce, lasagna noodles, cheese.</p>
     <p>Cooking instructions: We do not provide cooking instructions.</p>
 </body>
